# idk

./: .gitignore  CMakeLists.txt  build.gradle.kts  main.cpp  readme.md  settings.gradle.kts
cpp/: CMakeLists.txt  main.cpp  navamain  test.idk
cpp/examples/: Debug.nava  System.nava  call_method.nava  class_def.nava  class_method.nava  class_method_arg.nava  class_method_body.nava  class_method_body_arg.nava  div.nava  global_var.nava  if.nava  if_true.nava  import_expression.nava  main  mod.nava  mod.txt  mult.nava  parentisis_expressions.nava  plus.nava  sub.nava  test.py  variable_declaration_number.nava  variable_declaration_number_binop.nava  variable_declaration_string.nava  variable_declaration_variable.nava  while.nava
cpp/examples/error/: wrong_class_def_abstract_final.nava  wrong_class_def_base_type.nava  wrong_class_def_root_static.nava
cpp/examples/math/: div.nava  mod.nava  mult.nava  plus.nava  sub.nava
cpp/nava/: Bool.nava  Conditions.nava  Loop.nava  Main.nava  Math.nava  System.nava  build.py  check_exit.sh  main
cpp/new/: ast.cpp  ast.hpp  checker.cpp  checker.hpp  expressions.cpp  expressions.hpp  global.cpp  global.hpp  str_helper.cpp  str_helper.hpp  x86_64_helper.cpp  x86_64_helper.hpp  x86_64_nasm_linux.cpp  x86_64_nasm_linux.hpp
cpp/src/: ast.cpp  ast.hpp  checker.hpp  codegen.cpp  codegen.hpp  debug.cpp  expressions.cpp  expressions.hpp  log.hpp  nava.hpp  str_helper.cpp  tokenizer.cpp  tokenizer.hpp  x86_64_helper.cpp  x86_64_helper.hpp  x86_64_nasm_linux.hpp
examples/: array.nava  bool_true.nava  control_flow.idk  fibonacci.nava  test.py  (+7 more)
(+46 files in other folders)
